@@ -1,3 +1,12 @@
+2008-03-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/5913
+	* elfxx-ia64.c (elfNN_ia64_tprel_base): Remove BFD_ASSERT.
+	(elfNN_ia64_dtprel_base): Likewise.
+	(elfNN_ia64_relocate_section): Go to missing_tls_sec if
+	tls_sec is NULL before calling elfNN_ia64_tprel_base or
+	elfNN_ia64_dtprel_base.  Report unsupported TLS relocations.
+
 2008-03-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-spu.c (process_stubs, spu_elf_relocate_section): Move
